@@ -1,2 +1,2 @@
-EBUILD axkb-9999.ebuild 618 RMD160 ffda39366bc8fec43969bd71e43fbc7c3dae9a4f SHA1 2600bed93d8a566074254a79751c337b1ad325fd SHA256 6867e581054d45258621e934b775a3c9a0df72aa8c89834b4157ca7ac7686bb7
-MISC ChangeLog 239 RMD160 323ffce3a62680eeede282ea4922075d72bdcd31 SHA1 badccf344a15a042057bbc3d47c4aefe65547998 SHA256 514407e6e601cff03cdfe04389247e9ce0b8b21b56e99cf405b57421033b7ef7
+EBUILD axkb-9999.ebuild 486 RMD160 d31020d2356eb144e49e960f827a20cbe07b6197 SHA1 e4238c9f3e6738fafaa21747fd31245d38a45d05 SHA256 d3565170b9e0b2df0b881d10c64afb8e2c0ab4d69607a94f331be151d48115f5
+MISC ChangeLog 345 RMD160 459036c0a5d97a260fc544b1ae75b64285cdbbab SHA1 374d5afb0418e368b8ce9ac4b7f92d25cb31cc15 SHA256 307ea2fb0fd1d3ccfd2133697fbc21d067d8ac3eacf1f4c10fa87f71a6a50d4a
